Adding view hide for farmer homepage

--- a/public/partials/farmers/homepage.html
+++ b/public/partials/farmers/homepage.html
@@ -25,8 +25,8 @@
     </ul>
 </div>
 
-
-<div  ng-show="vari == 3" style="margin-top: -10rem">
+<div  ng-show="vari == 3">
+<div  style="margin-top: -10rem">
     <div class="container-fluid" id="tweetfield" style="margin-left: 50rem" >
         <div class="" id="txt">
             <form>
@@ -44,6 +44,7 @@
         <div id="comments"> {{ value.tweetValue}} </div>
     </div>
 </div>
+    </div>
 
 
 <div class = "searchdiv ">
