--- a/public/partials/farmers/homepage.html
+++ b/public/partials/farmers/homepage.html
@@ -22,6 +22,8 @@
         </a><span class="notification">{{farmlength}}</span></li>
         <li><a ng-click="showTweets()">Farmer Feed <img src="https://cdn3.iconfinder.com/data/icons/mobipeople/512/farmer_remove_volume_vector_icons-24.png" />
         </a><span class="notification"></span></li>
+        <li><a ng-click="getUrl()">Video <img src="https://cdn4.iconfinder.com/data/icons/48-bubbles/48/24.TV-24.png" />
+        </a><span class="notification"></span></li>
         <!--<li><a href="#">Charts &nbsp <img src="https://cdn0.iconfinder.com/data/icons/free-misc-icon-set-2/512/graph_up_arrow-24.png" />
         </a></li>-->
     </ul>
@@ -313,6 +315,16 @@
 
 <!-- Product Code Ends -->
 
+<div  ng-show="vari == 5">
+    <div ng-repeat = "value in result" style="margin-left: 35rem;margin-top : 2rem; width: 50rem; " >
+        <div style="background-color: white;padding: 10px">
+            <div>
+                <label style="color: #660000">Description:</label>{{value.description}}
+            </div>
+            <a href="{{value.url}}" target="_blank" style="padding: 10px">click here</a>
+        </div>
+    </div>
+</div>
 
 <!-- Resource Code Starts -->
 <div ng-show="vari==4">
