--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,7 @@
 
     <!-- Stylesheets -->
     <link rel='stylesheet' href='/stylesheets/style.css'/>
-
+    <link rel="shortcut icon" href="../images/logo1.png"/>
    <!-- <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"/>-->
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://kendo.cdn.telerik.com/2016.1.412/styles/kendo.common.min.css"/>
