--- a/public/partials/farmers/homepage.html
+++ b/public/partials/farmers/homepage.html
@@ -329,7 +329,16 @@
 
 <!-- Product Code Ends -->
 
+
+
+
 <div  ng-show="vari == 5">
+    <div style="margin-left: 35rem; ">
+        <iframe  src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F1611289549132269%2Fvideos%2Fvb.1611289549132269%2F1674903262770897%2F%3Ftype%3D3&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+        <br>
+        <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F1611289549132269%2Fvideos%2Fvb.1611289549132269%2F1675895919338298%2F%3Ftype%3D3&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+    </div>
+
     <div ng-repeat = "value in result" style="margin-left: 35rem;margin-top : 2rem; width: 50rem; " >
         <div style="background-color: white;padding: 10px">
             <div>
