--- a/public/partials/farmers/homepage.html
+++ b/public/partials/farmers/homepage.html
@@ -24,7 +24,7 @@
         </a><span class="notification">{{farmlength}}</span></li>
         <li><a ng-click="showTweets()">Farmer Feed <img src="https://cdn3.iconfinder.com/data/icons/mobipeople/512/farmer_remove_volume_vector_icons-24.png" />
         </a><span class="notification"></span></li>
-        <li><a ng-click="getUrl()">Search Video<img src="https://cdn4.iconfinder.com/data/icons/48-bubbles/48/24.TV-24.png" />
+        <li><a ng-click="searchvideo()">Search Video<img src="https://cdn4.iconfinder.com/data/icons/48-bubbles/48/24.TV-24.png" />
         </a><span class="notification"></span></li>
         <li><a ng-click="videos()">Educational Videos<img src="https://cdn4.iconfinder.com/data/icons/48-bubbles/48/24.TV-24.png" />
         </a><span class="notification"></span></li>
@@ -314,10 +314,12 @@
 
 
 <div  ng-show="vari == 5">
-    <div style="margin-left: 35rem; ">
-        <iframe  src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F1611289549132269%2Fvideos%2Fvb.1611289549132269%2F1674903262770897%2F%3Ftype%3D3&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-        <br>
-        <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F1611289549132269%2Fvideos%2Fvb.1611289549132269%2F1675895919338298%2F%3Ftype%3D3&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+
+    <div class = "searchdiv ">
+        <input id = "searchAdmin" type="text" placeholder="Search" ng-model = "searchText" />
+        <button id="searchButton" type="button" ng-click="getUrl()">
+            <img style="height: 16px; width: 16px" src="https://cdn2.iconfinder.com/data/icons/kailoon/myicon/search.png" />
+        </button>
     </div>
 
     <div ng-repeat = "value in result" style="margin-left: 35rem;margin-top : 2rem; width: 50rem; " >
@@ -328,6 +330,16 @@
             <a href="{{value.url}}" target="_blank" style="padding: 10px">click here</a>
         </div>
     </div>
+</div>
+
+<div ng-show="vari == 8">
+    <div class = "searchdiv ">
+        <input id = "searchAdmin" type="text" placeholder="Search" ng-model = "searchText" />
+        <button id="searchButton" type="button" ng-click="getUrl()">
+            <img style="height: 16px; width: 16px" src="https://cdn2.iconfinder.com/data/icons/kailoon/myicon/search.png" />
+        </button>
+    </div>
+
 </div>
 
 <div  ng-show="vari == 7">
