--- a/public/partials/products/products_list.html
+++ b/public/partials/products/products_list.html
@@ -80,7 +80,7 @@
                         <input type="number" ng-model="cartItem.quantity" />
                     </div>
                     <div class="product-list-single-item-name col-md-2 product-list-individual-namune">
-                        Rs{{cartItem.productPrice}}
+                        Rs{{cartItem.productPrice}}" "
                     </div>
                     <div class="product-list-single-item-quantity col-md-3 end-list product-list-individual-namune">
                         Rs{{cartItem.quantity * cartItem.productPrice}}
