--- a/public/partials/bills/orders.html
+++ b/public/partials/bills/orders.html
@@ -36,7 +36,7 @@
            <!-- <div >
                 {{items.expectedDeliveryDate}}
             </div>-->
-            Rate this item:
+            <!--Rate this item:
             <div>
                 <select ng-model="rating" ng-change="ratingSelected(rating,items.product_id)">
                     <option value="1">1</option>
@@ -45,7 +45,7 @@
                     <option value="4">4</option>
                     <option value="5">5</option>
                 </select>
-            </div>
+            </div>-->
 
         </div>
         <!--<div class="right col-sm-2">
