--- a/public/partials/farmers/homepage.html
+++ b/public/partials/farmers/homepage.html
@@ -24,9 +24,9 @@
         </a><span class="notification"></span></li>
         <li><a ng-click="showTweets()">Farmer Feed <img src="https://cdn3.iconfinder.com/data/icons/mobipeople/512/farmer_remove_volume_vector_icons-24.png" />
         </a><span class="notification"></span></li>
-        <li><a ng-click="searchvideo()">Search Video<img src="https://cdn4.iconfinder.com/data/icons/48-bubbles/48/24.TV-24.png" />
+        <li><a ng-click="searchvideo()">Crop Videos<img src="https://cdn4.iconfinder.com/data/icons/48-bubbles/48/24.TV-24.png" />
         </a><span class="notification"></span></li>
-        <li><a ng-click="videos()">Educational Videos<img src="https://cdn4.iconfinder.com/data/icons/48-bubbles/48/24.TV-24.png" />
+        <li><a ng-click="videos()">Latest Farming Technologies<img src="https://cdn4.iconfinder.com/data/icons/48-bubbles/48/24.TV-24.png" />
         </a><span class="notification"></span></li>
         <!--<li><a href="#">Charts &nbsp <img src="https://cdn0.iconfinder.com/data/icons/free-misc-icon-set-2/512/graph_up_arrow-24.png" />
         </a></li>-->
