--- a/public/partials/products/products_list.html
+++ b/public/partials/products/products_list.html
@@ -79,10 +79,9 @@
                     <div class="product-list-single-item-quantity col-md-2 product-list-individual-namune">
                         <input type="number" ng-model="cartItem.quantity" />
                     </div>
-                    <div class="product-list-single-item-name col-md-2 product-list-individual-namune">
+                    <!--<div class="product-list-single-item-name col-md-2 product-list-individual-namune">
                         Rs{{cartItem.productPrice}}&nbsp
-                    </div>
-
+                    </div>-->
                     <div class="product-list-single-item-quantity col-md-3 end-list product-list-individual-namune">
                         Rs{{cartItem.quantity * cartItem.productPrice}}
                     </div>
