--- a/public/partials/dopdownlist.html
+++ b/public/partials/dopdownlist.html
@@ -65,38 +65,44 @@
 
             <script>
                 $(document).ready(function() {
-                	
+
                 	var data = new Array();
             		var files = new Array();
-            		
+
             		var date1 = new Object();
                 	date1.date = "29 April 2016";
                 	date1.filename = "PriceTrendsData/xml1.xml";
-                	
+
                 	var date2 = new Object();
                 	date2.date = "30 April 2016";
                 	date2.filename = "PriceTrendsData/xml30april.xml";
-                	
+
                 	var date3 = new Object();
                 	date3.date = "2 May 2016";
-                	date3.filename = "PriceTrendsData/xml30april.xml";
-                	
-            		
-            		files.push(date1);
+                	date3.filename = "PriceTrendsData/xml2may.xml";
+
+					var date4 = new Object();
+					date4.date = "4 May 2016";
+					date4.filename = "PriceTrendsData/xml4may.xml";
+
+
+
+					files.push(date1);
             		files.push(date2);
             		files.push(date3);
-                	
+					files.push(date4);
+
                 		var dates = $("#dates").kendoDropDownList({
       			        	optionLabel: "Select Date...",
       			        	dataTextField: "date",
                             dataValueField: "filename",
       			            close:callFile,
       			            dataSource:files
-      			            
-      			        }).data("kendoDropDownList");	
-                	
-                	
-                	
+
+      			        }).data("kendoDropDownList");
+
+
+
             		function callFile(){
             			var filename = $("#dates").val();
             			$.ajax({
@@ -118,30 +124,30 @@
                 						person.Max_x0020_Price = $(this).find("Max_x0020_Price").text();
                 						person.Modal_x0020_Price = $(this).find("Modal_x0020_Price").text();
                 						data.push(person);
-                						
+
                 					});
                 				});
                 				show();
                 			},
                 			async : true
                 		});
-            			
+
             		}
-            		
+
             		var show = function(){
-            		
+
             			  var categories = $("#states").kendoDropDownList({
       			        	optionLabel: "Select State...",
-      			           
+
       			            close:onStateSelect,
       			            dataSource: getStates()
-      			            
+
       			        }).data("kendoDropDownList");
             		}
-            		
+
             		var getStates = function(){
             			var stateArray = new Array();
-            			
+
             			data.forEach( function (arrayItem)
             					{
             					    var x = arrayItem;
@@ -152,20 +158,20 @@
             					});
             			return stateArray;
             		}
-            		
+
                 	function onStateSelect(e){
-                		
-                		
+
+
                 		 var products = $("#districts").kendoDropDownList({
                              autoBind: false,
-                           
+
                              optionLabel: "Select district...",
      			             close:onDestrictSelect,
                              dataSource: getDisctrict()
                          }).data("kendoDropDownList");
 
                 	}
-                
+
                 	var getDisctrict = function(){
                 		var selected = $("#states").val();
 						var destrictArray = new Array();
@@ -180,19 +186,19 @@
             					   }
             					});
             			return destrictArray;
-            			
+
                 	}
-                	
+
                 	var onDestrictSelect = function(){
                 		 var orders = $("#markets").kendoDropDownList({
                              autoBind: false,
-                           
+
                              optionLabel: "Select Market...",
      			           close:onMarketSelect,
                              dataSource: getMarkets()
                          }).data("kendoDropDownList");
                 	}
-                	
+
                 	var getMarkets = function(){
                 		var selectedState = $("#states").val();
                 		var selectedDestrict = $("#districts").val();
@@ -208,21 +214,21 @@
             					   }
             					});
             			return marketArray;
-            			
+
                 	}
-                	
-                	
+
+
                 	//commodity
                 	var onMarketSelect = function(){
                		 var orders = $("#commodities").kendoDropDownList({
                             autoBind: false,
-                          
+
                             optionLabel: "Select Commodities...",
     			           close:onCommoditySelect,
                             dataSource: getCommodity()
                         }).data("kendoDropDownList");
                	}
-               	
+
                	var getCommodity = function(){
                		var selectedState = $("#states").val();
                		var selectedDestrict = $("#districts").val();
@@ -239,21 +245,21 @@
            					   }
            					});
            			return commodityArray;
-           			
+
                	}
-               	
-               	
+
+
                	//variety
             	var onCommoditySelect = function(){
            		 var orders = $("#varieties").kendoDropDownList({
                         autoBind: false,
-                      
+
                         optionLabel: "Select Variety...",
 			           close:onVareitySelect,
                         dataSource: getVariety()
                     }).data("kendoDropDownList");
            	}
-           	
+
            	var getVariety = function(){
            		var selectedState = $("#states").val();
            		var selectedDestrict = $("#districts").val();
@@ -271,9 +277,9 @@
        					   }
        					});
        			return varietyArray;
-       			
+
            	}
-           	
+
             	var onVareitySelect = function(){
            		var selectedState = $("#states").val();
            		var selectedDestrict = $("#districts").val();
@@ -286,15 +292,15 @@
        					    var x = arrayItem;
        					    if(x.state==selectedState && x.disctrict == selectedDestrict && x.market == selectedMarket && x.Commodity == selectedCommodity && x.Variety == selectedVariety){
        					   		product = x;
-       					   		
+
        					   }
        					});
-           		
+
            		$("#modalprice").html(product.Modal_x0020_Price);
            		$("#minprice").html(product.Min_x0020_Price);
            		$("#maxprice").html(product.Max_x0020_Price);
-           		
-           	} 
+
+           	}
 
                      $("#get").click(function() {
                         var categoryInfo = "\nCategory: { id: " + categories.value() + ", name: " + categories.text() + " }",
@@ -302,7 +308,7 @@
                             orderInfo = "\nOrder: { id: " + orders.value() + ", name: " + orders.text() + " }";
 
                         alert("Order details:\n" + categoryInfo + productInfo + orderInfo);
-                    });                
+                    });
               });
             </script>
         </div>
