Adding customer signup fix

--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -20,7 +20,7 @@
             <span class="sign-up-prompt-span">
 
                 New customer?
-                <a href="#" id="link">Create a new Farmer Help account</a>
+                <a ng-click="goToCustomerSignUp()" id="link">Create a new Farmer Help account</a>
             </span>
         </div>
         <div class="login-footer" >
